src/test/deca/context/invalid/pierre/objects/callUndefinedMethod.deca
class A {}
{
    A a = new A();
    a.noMethod();
}
